# monday-python

./: .gitignore  LICENSE  README.md  pyproject.toml
monday/: client.py  exceptions.py
