[tool.poetry]
name = "monday-python"
version = "0.2.2"
description = "API wrapper for monday.com written in Python"
authors = ["Gearplug Team <apps@gearplug.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "monday"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

